Added Recipe page
Added the page "Red_Sauce.html" as well as the
boilerplate and a link back to the home page
on said red sauce page.

--- a/recipes/Red_Sauce.html
+++ b/recipes/Red_Sauce.html
@@ -6,9 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/Red_sauce.html">
-        Red Sauce
-    </a>
+    <h1>Read Sauce Recipe</h1>
+    <p>
+        <a href="../index.html">
+            Home
+        </a>
+    </p>
 </body>
 </html>
