Added a full recipe to the red sauce page
Added an image at the top of the page.
Added an unordered list for the ingredients needed.
Added an ordered list for steps to take.
Added a description for the recipe. 1 paragraph.

--- a/recipes/Red_Sauce.html
+++ b/recipes/Red_Sauce.html
@@ -6,11 +6,86 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Read Sauce Recipe</h1>
+    <h1>
+        Read Sauce Recipe
+    </h1>
+    <img src="/home/b4space/Downloads/red_sauce_image.png" alt "a picture of red sauce" height "200" width "200">
+    <h2>
+        Description
+    </h2>
     <p>
-        <a href="../index.html">
-            Home
-        </a>
+        Quick and easy italian american red sauce in 40 minutes or less! 
+        This recipe is sure to fill your stomach and satisfy your taste buds, while also being cheap and easy to make.
+        Simmered with plenty of garlic, dried oregano, red pepper flakes, and basil, this go-to tomato sauce can be made quickly but still has long-cooked flavor.
+        Good for date nights, dinner for one, and dinner for the family.
     </p>
+    <h2>
+        Ingredients
+    </h2>
+    <ul>
+        <li>
+            4 cloves garlic, crushed
+        </li>
+        <li>
+            pinch of red pepper flakes
+        </li>
+        <li>
+            1 teaspoon (2 g) dried oregano
+        </li>
+        <li>
+            3 tablespoons (50 g) tomato paste
+        </li>
+        <li>
+            2 (28-ounce) cans whole peeled tomatoes
+        </li>
+        <li>
+            1 large sprig basil
+        </li>
+        <li>
+            Kosher salt
+        </li>
+        <li>
+            2 tablespoons (30 ml) extra-virgin olive oil
+        </li>
+    </ul>
+    <h2>
+        Steps
+    </h2>
+    <ol>
+        <li>
+            In a large pot, combine oil and garlic, and heat over moderately low heat until garlic begins to very gently sizzle.
+        </li>
+        <li>
+            Add red pepper flakes and cook, stirring, until garlic just begins to turn a light golden color, about 3 minutes.
+        </li>
+        <li>
+            Add oregano and continue to cook, stirring, for 1 minute.
+        </li>
+        <li>
+            Add tomato paste and cook, stirring, until paste has softened and blended with oil, about 3 minutes.
+        </li>
+        <li>
+            Stir in canned tomatoes and their juices, increase heat to medium-high, bring to a gentle simmer, then lower heat to maintain.
+        </li>       
+         <li>
+            Using an immersion blender, blend tomatoes until sauce is smooth.
+            (Alternatively, use potato masher to crush tomatoes or crush tomatoes by hand before adding to pot.)
+        </li>
+        <li>
+            Add basil and simmer, stirring occasionally, until sauce is reduced slightly and tastes rich, about 30 minutes. 
+            Season with salt.
+        </li>
+        <li>
+            Discard basil. Stir in butter, if using, until melted. 
+        </li>
+        <li>
+            Use sauce right away, or allow to cool to room temperature, transfer to sealed containers and refrigerate for up to 5 days or freeze for up to 6 months.
+        </li>
+    </ol>
+     <a href="../index.html">
+         Home
+    </a>
+    
+
 </body>
 </html>
