Fixed spelling errors in the index and sauce page

--- a/recipes/Red_Sauce.html
+++ b/recipes/Red_Sauce.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>
-        Read Sauce Recipe
+        Red Sauce Recipe
     </h1>
     <img src="/home/b4space/Downloads/red_sauce_image.png" alt "a picture of red sauce" height "200" width "200">
     <h2>
