--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/Red_sauce.html">
+    <a href="recipes/Red_Sauce.html">
         Red Sauce
     </a>
 </body>
