New "bagel" page, added pizzaz to sauce page
Added the new bagel recipe page.
Added new text fixtures to the sauce page
Added bagels to the home page as well as making
the links into headings. Made the home page link
into a heading. New bagel page is made the same
as sauce page just with different text (obviously)
and more list items.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,24 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/Red_Sauce.html">
-        Red Sauce
-    </a>
+    <ul>
+   <li> 
+        <h2>
+            <a href="recipes/Red_Sauce.html">
+            Red Sauce
+            </a>
+        </h2>
+   </li>
+   <li>
+        <h2>
+            <a href="recipes/Bagels.html">
+            Bagels
+             </a>
+        </h2>
+   </li>
+   <li>
+
+   </li>
+    </ul>
 </body>
 </html>
