--- a/recipes/Red_Sauce.html
+++ b/recipes/Red_Sauce.html
@@ -9,15 +9,23 @@
     <h1>
         Red Sauce Recipe
     </h1>
-    <img src="/home/b4space/Downloads/red_sauce_image.png" alt "a picture of red sauce" height "200" width "200">
+    <img src="/home/b4space/Downloads/red_sauce_image.png" alt "a picture of red sauce" Height "200" Width "200">
     <h2>
         Description
     </h2>
     <p>
-        Quick and easy italian american red sauce in 40 minutes or less! 
+        <strong>
+            Quick and easy italian american red sauce in 40 minutes or less!
+        </strong> 
+    </p>
+    <p> 
         This recipe is sure to fill your stomach and satisfy your taste buds, while also being cheap and easy to make.
         Simmered with plenty of garlic, dried oregano, red pepper flakes, and basil, this go-to tomato sauce can be made quickly but still has long-cooked flavor.
-        Good for date nights, dinner for one, and dinner for the family.
+    </p> 
+    <p>   
+        <Em>
+            Good for date nights, dinner for one, and dinner for the family.
+        </Em>
     </p>
     <h2>
         Ingredients
@@ -82,10 +90,11 @@
             Use sauce right away, or allow to cool to room temperature, transfer to sealed containers and refrigerate for up to 5 days or freeze for up to 6 months.
         </li>
     </ol>
+    <h3>
      <a href="../index.html">
          Home
     </a>
-    
+    </h3>
 
 </body>
 </html>
