Added Fried_Rice page and fixed image problem
Added the fried rice page and linked it to the
home page as well as fixing the problem with the
images not adhering to the sizes i set and not
having a fail text.

--- a/recipes/Bagels.html
+++ b/recipes/Bagels.html
@@ -9,7 +9,7 @@
     <h1>
         Bagel Recipe
     </h1>
-    <img src="/home/b4space/Downloads/Bagel.png" alt "a picture of a bagel" Height "200" Width "200">
+    <img src="/home/b4space/Downloads/Bagel.png" alt="a picture of a bagel" Height="200" Width="200">
     <h2>
         Description
     </h2>
