--- a/index.html
+++ b/index.html
@@ -19,11 +19,15 @@
         <h2>
             <a href="recipes/Bagels.html">
             Bagels
-             </a>
+            </a>
         </h2>
    </li>
    <li>
-
+        <h2>
+            <a href="recipes/Fried_Rice.html">
+            Fried Rice
+            </a>
+        </h2>
    </li>
     </ul>
 </body>
