--- a/recipes/Red_Sauce.html
+++ b/recipes/Red_Sauce.html
@@ -9,7 +9,7 @@
     <h1>
         Red Sauce Recipe
     </h1>
-    <img src="/home/b4space/Downloads/red_sauce_image.png" alt "a picture of red sauce" Height "200" Width "200">
+    <img src="/home/b4space/Downloads/red_sauce_image.png" alt="a picture of red sauce" Height="200" Width="200">
     <h2>
         Description
     </h2>
