Fixed image problem
Images were saved to my computer and wouldnt load
on a public website so i changed the adress of the
images.

--- a/recipes/Fried_Rice.html
+++ b/recipes/Fried_Rice.html
@@ -9,7 +9,7 @@
     <h1>
         Fried Rice
     </h1>
-    <img src="/home/b4space/Downloads/Fried_Rice.png" alt="a picture of fried rice" Width="200" Height="200">
+    <img src="https://www.google.com/imgres?q=fried%20rice&imgurl=https%3A%2F%2Ftiffycooks.com%2Fwp-content%2Fuploads%2F2024%2F07%2FChicken-Fried-Rice-Done-500x500.webp&imgrefurl=https%3A%2F%2Ftiffycooks.com%2Fchicken-fried-rice-definitely-better-than-takeout%2F&docid=foGC_3hS2W9cQM&tbnid=idGK8E_fmdLULM&vet=12ahUKEwjugaWevIeMAxUCFlkFHRD3GxQQM3oECFEQAA..i&w=500&h=500&hcb=2&ved=2ahUKEwjugaWevIeMAxUCFlkFHRD3GxQQM3oECFEQAA" alt="a picture of fried rice" Width="200" Height="200">
     <h2>
         Description
     </h2>
