--- a/recipes/Red_Sauce.html
+++ b/recipes/Red_Sauce.html
@@ -9,7 +9,7 @@
     <h1>
         Red Sauce Recipe
     </h1>
-    <img src="/home/b4space/Downloads/red_sauce_image.png" alt="a picture of red sauce" Height="200" Width="200">
+    <img src="https://www.google.com/imgres?q=red%20sauce&imgurl=https%3A%2F%2Fwww.seriouseats.com%2Fthmb%2F_nurCIpYhImZoScla4LZazMEP1U%3D%2F1500x0%2Ffilters%3Ano_upscale()%3Amax_bytes(150000)%3Astrip_icc()%2F__opt__aboutcom__coeus__resources__content_migration__serious_eats__seriouseats.com__images__2014__09__20140919-easy-italian-american-red-sauce-vicky-wasik-20-e0ecaa3d8b0d443f8dcd8764df7926c2.jpg&imgrefurl=https%3A%2F%2Fwww.seriouseats.com%2Feasy-italian-amercian-red-sauce-recipe&docid=rCk3g4uxoS-wNM&tbnid=46JeTTbYTjPEBM&vet=12ahUKEwiU_dK0vIeMAxXNElkFHRmbNqEQM3oECBoQAA..i&w=1500&h=1125&hcb=2&ved=2ahUKEwiU_dK0vIeMAxXNElkFHRmbNqEQM3oECBoQAA" alt="a picture of red sauce" Height="200" Width="200">
     <h2>
         Description
     </h2>
