Updated each file with css as well as adding css files.
Each file has css attached to center the top text
as well as give it a font size. New css files are
named after the one they affect.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet"  href="index.css" >
 </head>
 <body>
+    <div class="gooberton">
     <h1>Odin Recipes</h1>
-    <ul>
+    </div>
+<div>
+<ul class="sillies">
    <li> 
         <h2>
             <a href="recipes/Red_Sauce.html">
@@ -29,6 +33,7 @@
             </a>
         </h2>
    </li>
-    </ul>
+</ul>
+</div>
 </body>
 </html>
